InternexDev_Sandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <externalId>true</externalId>
        <label>Contact Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_for_Integration__c</fullName>
        <formula>UPPER(Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email for Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MP External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_for_Integration__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone for Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Grade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_MP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritiv__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether contact is a default contact</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akritiv__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritiv__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritiv__Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic (Egypt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Jordan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Kuwait)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Lebanon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (Saudi Arabia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic (United Arab Emirates)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenian (Armenia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian (Bulgaria)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan (Spain,Euro)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan (Spain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Hong Kong)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Taiwan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian (Croatia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech (Czech Republic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish (Denmark)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Belgium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Netherlands)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch (Suriname)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Barbados)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Bermuda)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Ghana)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akritivtlm__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_on_Email</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Email) || ISBLANK(Email)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Email Should not be Blank</errorMessage>
    </validationRules>
</CustomObject>